--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "ONSAS"
 uuid = "7d8da659-23aa-453a-9a19-a3d1f6c795f5"
-authors = ["Jorge Pérez Zerpa"]
+authors = ["to be defined"]
 version = "0.0.0"
 
 [deps]
