--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 MshReader = "0.1"
+Reexport = "1"
 StaticArrays = "1"
 julia = "1"
 
