--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["to be defined"]
 version = "0.0.0"
 
 [deps]
+AutoHashEquals = "15f4f7f2-30c1-5605-9d31-71845cf9641f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MshReader = "64cd2da2-d71d-431a-81e3-4cf84ef169dd"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -13,8 +14,8 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 MshReader = "0.1"
-SafeTestsets = "0.0.1"
 Reexport = "1"
+SafeTestsets = "0.0.1"
 StaticArrays = "1"
 julia = "1"
 
