--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
+AutoHashEquals = "0.2"
 MshReader = "0.1"
 Reexport = "1"
 SafeTestsets = "0.0.1"
