--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ Dictionaries = "0.3"
 IterativeSolvers = "0.9"
 MshReader = "0.1"
 Reexport = "1"
+Roots = "2"
 SafeTestsets = "0.0.1"
 StaticArrays = "1"
 julia = "1"
