--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
 [compat]
 AutoHashEquals = "0.2"
 Dictionaries = "0.3"
+ForwardDiff = "0.10"
 IterativeSolvers = "0.9"
 MshReader = "0.1"
 Reexport = "1"
