--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
 AutoHashEquals = "0.2"
 Dictionaries = "0.3"
 ForwardDiff = "0.10"
+Gmsh = "0.2"
 IterativeSolvers = "0.9"
 MshReader = "0.1"
 Reexport = "1"
