CompatHelper: add new compat entry for LazySets at version 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,6 @@
 name = "ONSAS"
 uuid = "7d8da659-23aa-453a-9a19-a3d1f6c795f5"
 authors = ["M.C. Vanzulli  <mvanzullu@fing.edu.uy>", "jorgepz <jorgepz@fing.edu.uy>", "mforets  <mforets@gmail.com>"]
-
 version = "0.0.0"
 
 [deps]
@@ -26,6 +25,7 @@ Dictionaries = "0.3"
 ForwardDiff = "0.10"
 Gmsh = "0.2"
 IterativeSolvers = "0.9"
+LazySets = "2"
 MshReader = "0.1"
 Reexport = "1"
 Roots = "2"
