--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ LazySets = "2"
 MshReader = "0.1"
 Reexport = "1"
 Roots = "2"
-SafeTestsets = "0.0.1"
+SafeTestsets = "0.0.1, 0.1"
 StaticArrays = "1"
 Suppressor = "0.2"
 Tensors = "1"
