--- a/Project.toml
+++ b/Project.toml
@@ -38,6 +38,7 @@ Suppressor = "0.2"
 Tensors = "1"
 WriteVTK = "1"
 julia = "1"
+PrettyTables = "2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
