--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,11 @@
 name = "ONSAS"
 uuid = "7d8da659-23aa-453a-9a19-a3d1f6c795f5"
 authors = ["M.C. Vanzulli <mvanzulli@fing.edu.uy>", "M. Forets <mforets@gmail.com>", "J. M. Pérez Zerpa <jorgepz@fing.edu.uy>"]
-version = "0.3"
+version = "0.3.0"
 
 [deps]
 AutoHashEquals = "15f4f7f2-30c1-5605-9d31-71845cf9641f"
+CommonSolve = "38540f10-b2f7-11e9-35d8-d573e4eb0ff2"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
@@ -30,6 +31,7 @@ Gmsh = "0.2"
 IterativeSolvers = "0.9"
 LazySets = "2"
 MshReader = "0.1"
+PrettyTables = "2"
 Reexport = "1"
 Roots = "2"
 SafeTestsets = "0.0.1, 0.1"
@@ -38,7 +40,6 @@ Suppressor = "0.2"
 Tensors = "1"
 WriteVTK = "1"
 julia = "1"
-PrettyTables = "2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
