--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [compat]
 AutoHashEquals = "0.2"
+CommonSolve = "0.2"
 Dictionaries = "0.3"
 ForwardDiff = "0.10"
 Gmsh = "0.2"
