--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [compat]
-AutoHashEquals = "0.2"
+AutoHashEquals = "0.2, 1"
 CommonSolve = "0.2"
 Dictionaries = "0.3"
 ForwardDiff = "0.10"
