--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ AutoHashEquals = "0.2, 1, 2"
 CommonSolve = "0.2"
 Dictionaries = "0.3"
 ForwardDiff = "0.10"
-Gmsh = "0.2"
+Gmsh = "0.2, 0.3"
 IterativeSolvers = "0.9"
 LazySets = "2"
 MshReader = "0.1"
