--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 [compat]
 AutoHashEquals = "0.2, 1, 2"
 CommonSolve = "0.2"
-Dictionaries = "0.3"
+Dictionaries = "0.3, 0.4"
 ForwardDiff = "0.10"
 Gmsh = "0.2, 0.3"
 IterativeSolvers = "0.9"
