--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,6 +41,7 @@ jobs:
       - uses: codecov/codecov-action@v3
         with:
           files: lcov.info
+          fail_ci_if_error: false
   docs:
     name: Documentation
     runs-on: ubuntu-latest
