Use latest always (#478)

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,16 +29,16 @@ jobs:
             arch: x64
             version: 1
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@latest
       - uses: julia-actions/setup-julia@latest
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-      - uses: julia-actions/cache@v2
+      - uses: julia-actions/cache@@latest
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
       - uses: julia-actions/julia-processcoverage@latest
-      - uses: codecov/codecov-action@v4
+      - uses: codecov/codecov-action@latest
         with:
           files: lcov.info
           fail_ci_if_error: false
@@ -48,7 +48,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@latest
       - uses: julia-actions/setup-julia@latest
         with:
           version: '1'
