--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,6 @@ AutoHashEquals = "15f4f7f2-30c1-5605-9d31-71845cf9641f"
 CommonSolve = "38540f10-b2f7-11e9-35d8-d573e4eb0ff2"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
@@ -16,13 +15,10 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 MshReader = "64cd2da2-d71d-431a-81e3-4cf84ef169dd"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
-Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
@@ -47,7 +43,11 @@ WriteVTK = "1"
 julia = "1"
 
 [extras]
+Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 
 [targets]
-test = ["Test"]
+test = ["Gmsh", "Random", "Roots", "Test", "Suppressor"]
