--- a/Project.toml
+++ b/Project.toml
@@ -44,10 +44,11 @@ julia = "1"
 
 [extras]
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Gmsh", "Random", "Roots", "Test", "Suppressor"]
+test = ["Gmsh", "Documenter", "Random", "Roots", "Test", "Suppressor"]
