--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -57,7 +57,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: |
-          julia --project -e '
+          julia --project=docs -e '
             using Documenter: DocMeta, doctest
             using ONSAS
             DocMeta.setdocmeta!(ONSAS, :DocTestSetup, :(using ONSAS); recursive=true)
