Fix Aqua issues (#522)

--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,9 @@ CommonSolve = "0.2"
 Dictionaries = "0.4"
 ForwardDiff = "0.10"
 IterativeSolvers = "0.9"
+InteractiveUtils = "1"
+LinearAlgebra = "1"
+SparseArrays = "1"
 LazySets = "2"
 LinearSolve = "2"
 MshReader = "0.1"
@@ -33,4 +36,5 @@ Reexport = "1"
 StaticArrays = "1"
 Tensors = "1"
 WriteVTK = "1"
-julia = "1"
+julia = "1.11"
+
