--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ docs/site/
 # It records a fixed state of all packages used by the project.
 # Since we are not actively develpoing this pkg by now let's commit versions
 Manifest.toml
+test/Manifest.toml
+docs/Manifest.toml
 
 # Msh files
 *.msh
